--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:theme="@style/Theme.FoodRunner"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
+            android:name=".forgotPassword"
+            android:exported="false" />
+        <activity
+            android:name=".registerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".loginActivity"
             android:exported="false" />
         <activity
             android:name=".Login_Activity"
